Fixed background image and css
Rearragned the html structure, changed css structure, fixed css to filmview to match marlenes figma design. Decided to not have image cover because of how stretched the image looked. Added more media queries to make it more responsive.

--- a/src/pages/filmView/FilmView.css
+++ b/src/pages/filmView/FilmView.css
@@ -1,8 +1,15 @@
-.thumbnail-container {
-  position: relative;
-  display: inline-block;
+.closeIconHeader {
+  display: flex;
+  justify-content: flex-end;
 }
-
+.closeIcon {
+  border-radius: 50%;
+  margin: 1rem;
+}
+.icon {
+  height: 2.5rem;
+  width: 2.5rem;
+}
 .bookmark-overlay {
   position: absolute;
   top: 10px;
@@ -10,74 +17,87 @@
 }
 
 .film-container {
-  position: relative;
-  width: 100%;
-  height: 1100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: 50%;
+  background-size: 30% 80%;
   color: white;
+}
 
-  & .closeIconHeader {
-    display: flex;
-    justify-content: flex-end;
+.film-content {
+  width: 25%;
+  background-color: rgba(0, 0, 0, 0.661);
+  padding: 15px;
+  border-radius: 8px;
+}
+.film-title {
+  color: rgb(238, 116, 10);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.film-details {
+  background-color: rgba(210, 205, 196, 0.586);
+  border-radius: 6px;
+  padding: 2px 8px 2px 8px;
+  margin: 10px;
+}
+.film-detailsWrapper {
+  display: flex;
+  flex-direction: row;
+}
 
-    & .closeIcon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: rgba(254, 254, 254, 0.651);
-      padding: 5px;
-      border-radius: 50%;
-      margin: 20px;
+.titleAndBookmark {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 
-      & .icon {
-        height: 40px;
-        width: 40px;
-      }
-    }
+.titleAndBookmark h1 {
+  margin: 0;
+}
+
+.information {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.film-synopsis {
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+
+@media only screen and (max-width: 1450px) {
+  .film-container {
+    background-size: 35% 80%;
   }
 
-  & .film-content {
-    /* position: absolute; */
-    position: relative;
-    bottom: -700px;
-    position: absolute;
-    bottom: 0%;
-    margin: 20px;
-    background-color: rgba(
-      0,
-      0,
-      0,
-      0.661
-    ); /* Lätt genomskinlig bakgrund bakom texten, 0.558 */
-    padding: 10px;
-    padding: 15px;
-    border-radius: 8px;
-
-    & .titleAndBookmark {
-      display: flex;
-
-      & .thumbnail-container {
-        margin-left: auto;
-      }
-    }
+  .information {
+    flex-direction: column;
   }
+}
 
-  & .film-title {
-    color: rgb(238, 116, 10);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
+@media only screen and (max-width: 1200px) {
+  .film-container {
+    background-size: 50% 80%;
   }
+}
 
-  & .film-detailsWrapper {
-    display: flex;
+@media only screen and (max-width: 950px) {
+  .film-detailsWrapper {
+    flex-direction: column;
+  }
+}
 
-    & .film-details {
-      background-color: rgba(210, 205, 196, 0.586);
-      border-radius: 6px;
-      padding: 2px 8px 2px 8px;
-      margin: 10px;
-    }
+@media only screen and (max-width: 700px) {
+  .film-content {
+    width: 40%;
+  }
+  .film-container {
+    background-size: 80% 90%;
   }
 }
 
@@ -95,34 +115,22 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    top: 20%;
-    top: 35%;
-
-    & .film-title {
-      font-size: 22px;
-    }
-
-    & .film-detailsWrapper {
-      flex-direction: column;
-
-      & .film-details {
-        max-width: 200px;
-      }
-    }
-
-    .film-synopsis {
-      margin-right: 30px;
-      margin-left: 30px;
-    }
   }
 
-  .titleAndBookmark {
-    display: flex;
-    flex-direction: column;
+  .film-title {
+    font-size: 22px;
+  }
 
-    & .thumbnail-container {
-      display: flex;
-      margin-right: auto;
-    }
+  .film-detailsWrapper {
+    flex-direction: column;
+  }
+
+  .film-details {
+    max-width: 200px;
+  }
+
+  .film-synopsis {
+    margin-right: 30px;
+    margin-left: 30px;
   }
 }
